# CIOT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CIOT_darkweb_bitcoin analysis_20250816_154603.json  CIOT_darkweb_bitcoin analysis_20250816_154814.json  CIOT_darkweb_bitcoin analysis_20250816_154940.json  CIOT_darkweb_bitcoin analysis_20250816_155122.json  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DARK_WEB_OSINT_FIXES_SUMMARY.md  DEMONSTRATION_EXAMPLES.md  Dockerfile  FINAL_APPLICATION_STATUS.md  INDIAN_PHONE_INVESTIGATION_SUMMARY.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  SHERLOCK_SOCIAL_ANALYZER_FIXES.md  SIMPLIFIED_TOOLS_GUIDE.md  TEST_RESULTS_SUMMARY.md  TOR_SERVICE_COMPREHENSIVE_GUIDE.md  TRACEROUTE_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING_GUIDE.md  check_darkweb_status.py  comprehensive_app_test.py  demo_darkweb_output.py  demo_tor_output.py  docker-compose.yml  final_darkweb_test.py  install_darkweb_tools.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_comprehensive_tests.py  (+5 more)
.github/workflows/: ci.yml
.kiro/specs/comprehensive-osint-features/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-phone-investigation/: design.md  requirements.md  tasks.md
data/: README.md
docs/: development_guide.md  user_guide.md
src/: __init__.py  main.py
src/core/: application.py  audit_logger.py  case_management.py  config_manager.py  historical_data_manager.py  legal_compliance.py  privacy_manager.py  rate_limiter.py  secure_api_manager.py  security_manager.py
src/gui/tabs/: __init__.py  aadhaar_tab.py  additional_tools_tab.py  ai_assistant_tab.py  darkweb_tab.py  dashboard_tab.py  google_dorking_tab.py  image_analysis_tab.py  surface_web_tab.py
src/services/: __init__.py  forensic_tools.py  image_hosting.py  run_tool_dispatcher.py  search_engines.py  tor_service.py
src/services/darkweb_tools/: bitcoin_analysis_stub.py  breach_hunt_stub.py  darkscrape.py  finalrecon_stub.py  fresh_onions_stub.py  h8mail.py  h8mail_stub.py  onionscan.py  osint_spy_stub.py  torbot.py
src/utils/: async_intelligence_aggregator.py  breach_checker.py  cached_phone_formatter.py  country_manager.py  enhanced_phone_investigation.py  enhanced_phone_osint.py  gui_utils.py  historical_data_manager.py  intelligence_aggregator.py  osint_utils.py  pattern_analysis.py  phone_investigation_error_handler.py  phone_investigation_exceptions.py  phone_investigation_guidance.py  phone_investigation_retry.py  phone_processor.py  report_generator.py  reputation_checker.py  social_media_checker.py  validators.py  whois_checker.py
tests/: conftest.py  test_breach_checker.py  test_ci_configuration.py  test_comprehensive_e2e_tests.py  test_comprehensive_integration_tests.py  test_comprehensive_performance_tests.py  test_comprehensive_ui_tests.py  test_comprehensive_unit_tests.py  test_country_selection.py  test_country_ui_integration.py  test_enhanced_indian_features.py  test_enhanced_phone_integration.py  test_enhanced_results_display.py  test_fixtures_and_mocks.py  test_historical_data_manager.py  test_indian_phone_formatter.py  test_intelligence_aggregator.py  test_intelligence_aggregator_simple.py  test_pattern_analysis.py  test_pattern_analysis_integration.py  test_performance_optimization.py  test_phone_formatter.py  test_phone_investigation_error_handling.py  test_reputation_checker.py  test_security_measures.py  test_social_media_checker.py  test_user_experience_enhancements.py  test_whois_checker.py
tests/test_core/: test_config_manager.py
tests/test_utils/: test_validators.py
